--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,8 @@
-1. imam gresku kad hocu da pristupim logout strani kroz url: kaze get metod nije podrzan za ovu rutu. kako da mi samo izadje error?
+
 2. sta treba da se ocisti od datih fajlova od strane laravela?
 3. ko ima 'aktivan' opciju, klijent ili admin?
+4. kako da dodam formu da se otvara na klik, vrati informacije validacije i da se zatvori tek kad su sva polja ispravno uneta?
+5. treba da uvezem klijente sa adminom, da li stavljam user_id kategoriju i kako se ona popunjava kada admin popuni formu za novog klijenta?
+6. koja je razlika izmedju slot i props u list.item?
+7. pokazuje mi gresku:         dd(auth()->user()->clients());
+kao da klijet ne postoji ali se pokazuje kolekcija i relationship tip
