Fifth commit:Clients and db done

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,25 @@
 
 2. sta treba da se ocisti od datih fajlova od strane laravela?
 3. ko ima 'aktivan' opciju, klijent ili admin?
+
 4. kako da dodam formu da se otvara na klik, vrati informacije validacije i da se zatvori tek kad su sva polja ispravno uneta?
-5. treba da uvezem klijente sa adminom, da li stavljam user_id kategoriju i kako se ona popunjava kada admin popuni formu za novog klijenta?
-6. koja je razlika izmedju slot i props u list.item?
-7. pokazuje mi gresku:         dd(auth()->user()->clients());
+
+7. pokazuje mi gresku kod 'clients':         dd(auth()->user()->clients());
 kao da klijet ne postoji ali se pokazuje kolekcija i relationship tip
+8. list i form button su isti - napraviti samo jednu varijantu
+9. ponavlja se client back button. napraviti jedan
+
+11. sredi edit stranicu key-value pairs/ double foreach
+12. uraditi update kod admina
+13. paginacija strane klijenata
+14. grupisati klijent rute.
+
+Registracija: Validacija postojeceg korisnika se vrsi tek na drugoj stranici (proverava se da li postoji email u bazi), na prvoj se samo proverava da li su polja dovoljno dugacka i da li odgovara tip unetih podataka.
+
+15.da li remember_token treba da bude u fillable u User modelu ili ne??? stavila sam, sada se regenerise novi token pri svakom logovanju. https://laravel.com/docs/4.2/upgrade#upgrade-4.1.29 
+
+16. sesseion: https://laravel.com/docs/8.x/session
+
+17. da li treb da stavim regular expressions constrain: https://laravel.com/docs/8.x/routing#parameters-regular-expression-constraints
+
+-invoice stranice, logo
