--- a/app/index.html
+++ b/app/index.html
@@ -144,4 +144,24 @@ za storniranje:
 za update: 
 // $client->update($request()->all()); 
 
+DatabaseSeeder old: 
+// $user = User::factory()->create([
+//     'id' => '1',
+//     'first_name' => 'Aleksandra',
+//     'last_name' => 'Petrovic',
+//     'email' => 'ap@ap.com',
+//     'password' => Hash::make('11111111')
+// ]);
+
+// Client::factory(3)
+// ->hasInvoice (2,[
+//     'user_id' => $user->id,
+//     'user_name' => $user->first_name
+// ])
+// ->create([
+//     'user_id' => $user->id
+// ]);
+
+// Item::factory(5)->create();
+
 
