--- a/app/index.html
+++ b/app/index.html
@@ -164,4 +164,10 @@ DatabaseSeeder old:
 
 // Item::factory(5)->create();
 
+-----more users----
+// 'first_name' => $this->faker->firstName(),
+// 'last_name' => $this->faker->lastName(),
+// 'email' => $this->faker->unique()->safeEmail(),
+// 'password' => bcrypt($this->faker->password(8)),
+
 
