Working on invoice_create and search bar

--- a/app/index.html
+++ b/app/index.html
@@ -171,5 +171,7 @@ DatabaseSeeder old:
 // 'password' => bcrypt($this->faker->password(8)),
 
 
-PDF - previse dugo mi se ucitava
+***problem: Kad izbrisem neki podatak iz profila korisnika posle nece da mi se uloguje
+
+***lista invoice (i klijenata) treba da ide od poslednjeg napravljenog!
 
