--- a/app/index.html
+++ b/app/index.html
@@ -175,3 +175,7 @@ DatabaseSeeder old:
 
 ***lista invoice (i klijenata) treba da ide od poslednjeg napravljenog!
 
+Email tutorijal: https://www.itsolutionstuff.com/post/laravel-8-mail-laravel-8-send-email-tutorialexample.html
+
+Date converter: https://blog.quickadminpanel.com/how-to-easily-change-date-format-in-all-laravel-project/#:~:text=return%20%5B%20'date_format'%20%3D%3E,format(config('app.
+
