Fixed search filter

--- a/app/index.html
+++ b/app/index.html
@@ -179,3 +179,6 @@ Email tutorijal: https://www.itsolutionstuff.com/post/laravel-8-mail-laravel-8-s
 
 Date converter: https://blog.quickadminpanel.com/how-to-easily-change-date-format-in-all-laravel-project/#:~:text=return%20%5B%20'date_format'%20%3D%3E,format(config('app.
 
+Pokusala sa Join ali nije islo:  ->join('clients', 'invoices.client_id', '=', 'clients.id')
+//     ->where('clients.name', 'like', '%' . request('search') . '%');
+
